# tc-sam-cli

./: README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: push.yml
tcsamcli/: __init__.py  __main__.py  template_builder.py
tcsamcli/templates/: template.yaml.j2
