[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "tcsamcli"
dist-name = "tc-sam-cli"
author = "Niels Lemmens"
author-email = "draso.odin@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["jinja2", "aws-sam-cli==0.15", "click~=6.7", "sh", "toml", "tclambda"]
requires-python = ">=3.7"
description-file = "README.md"

[tool.flit.scripts]
tc-sam = "tcsamcli.__main__:cli"
